# winpty-rs

./: .gitignore  CHANGELOG.md  CHANGELOG.temp  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  build.rs  codecov.yml
.github/workflows/: windows_release.yml  windows_stable.yml  windows_stable_arm.yml
lib/: README.md  Windows.Wdk.winmd
src/: lib.rs  pty.rs
src/examples/: conpty.rs  winpty.rs
src/pty/: base.rs  conpty.rs  winpty.rs
src/pty/conpty/: bindings.rs  calls.rs  default_impl.rs  pty_impl.rs  win_bindings.rs
src/pty/winpty/: bindings.rs  default_impl.rs  pty_impl.rs
tests/: conpty.rs  winpty.rs
